app/src/main/java/com/example/todoapp/domain/error/EmptyTitleTaskError.kt
package com.example.todoapp.domain.error

/**
 * EmptyTitleTaskError
 *
 * @author (c) 2021, UVI TECH SAPI De CV, KAVAK
 */
class EmptyTitleTaskError: Throwable("Empty title")